COH-25669 Use member UID to identify topic subscribers (merge main -> ce/main 93189) RQ job.9.20220606163045.14006
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 93192]